@@ -120,8 +120,12 @@ so_symbol_names_table <-
       "linux, C, gcc, putchar, putchar",
       "linux, C, gcc, stderr, stderr",
       "linux, C, gcc, stdout, stdout",
+      "linux, C, gcc, sprintf, sprintf",
+      "linux, C, gcc, sprintf, __sprintf_chk",
       "linux, C, gcc, vprintf, vprintf",
       "linux, C, gcc, vprintf, __vprintf_chk",
+      "linux, C, gcc, vsprintf, vsprintf",
+      "linux, C, gcc, vsprintf, __vsprintf_chk",
       "linux, C++, gxx, std::cout, _ZSt4cout",
       "linux, C++, gxx, std::cerr, _ZSt4cerr",
       #"linux, C++, gxx, std::terminate, _ZSt9terminatev",
@@ -168,7 +172,9 @@ so_symbol_names_table <-
       "macos, C, gcc, putchar, _putchar",
       "macos, C, gcc, stderr, ___stderrp",
       "macos, C, gcc, stdout, ___stdoutp",
+      "macos, C, gcc, sprintf, _sprintf",
       "macos, C, gcc, vprintf, _vprintf",
+      "macos, C, gcc, vsprintf, _vsprintf",
       "macos, C++, gxx, std::cout, __ZSt4cout",
       "macos, C++, gxx, std::cerr, __ZSt4cerr",
       #"macos, C++, gxx, std::terminate, __ZSt9terminatev",
@@ -202,7 +208,9 @@ so_symbol_names_table <-
       "freebsd, C, gcc, putchar, putchar",
       "freebsd, C, gcc, stderr, __stderrp",
       "freebsd, C, gcc, stdout, __stdoutp",
+      "freebsd, C, gcc, sprintf, sprintf",
       "freebsd, C, gcc, vprintf, vprintf",
+      "freebsd, C, gcc, vsprintf, vsprintf",
       "freebsd, C++, gxx, std::cout, _ZSt4cout",
       "freebsd, C++, gxx, std::cerr, _ZSt4cerr",
       "freebsd, C, gcc, rand, rand",
@@ -229,7 +237,9 @@ so_symbol_names_table <-
       "solaris, C, solcc, printf, printf",
       "solaris, C, solcc, putchar, putchar",
       "solaris, C, solcc, puts, puts",
+      "solaris, C, solcc, sprintf, sprintf",
       "solaris, C, solcc, vprintf, vprintf",
+      "solaris, C, solcc, vsprintf, vsprintf",
       "solaris, C++, solCC, std::cout, __1cDstdEcout_",
       "solaris, C++, solCC, std::cerr, __1cDstdEcerr_",
       #"solaris, C++, solCC, std::terminate, _ZSt9terminatev",
@@ -264,7 +274,9 @@ so_symbol_names_table <-
       "solaris, C, gcc, printf, puts",
       "solaris, C, gcc, puts, puts",
       "solaris, C, gcc, putchar, putchar",
+      "solaris, C, gcc, sprintf, sprintf",
       "solaris, C, gcc, vprintf, vprintf",
+      "solaris, C, gcc, vsprintf, vsprintf",
       "solaris, C, gcc, rand, rand",
       "solaris, C, gcc, random, random",
       "solaris, C, gcc, rand_r, rand_r",
@@ -307,7 +319,9 @@ so_symbol_names_table <-
       "windows, C, gcc, printf, puts",
       "windows, C, gcc, puts, puts",
       "windows, C, gcc, putchar, putchar",
+      "windows, C, gcc, sprintf, sprintf",
       "windows, C, gcc, vprintf, vprintf",
+      "windows, C, gcc, vsprintf, vsprintf",
       ## Windows does not have (s)random
       "windows, C, gcc, rand, rand",
       "windows, C, gcc, rand_r, rand_r",
